--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arcpy.env.workspace = \"C:/Users/rucke/SpeedHumpProject/SpeedHump.gdb\"\n",
-    "fc = \"SpeedHump/SpeedHump20\"\n",
+    "arcpy.env.workspace = \"C:/Users/rucke/SpeedHumpProject/Speed Bump.gdb\"\n",
+    "fc = \"SpeedHump/SpeedBump\"\n",
     "edit = arcpy.da.Editor(arcpy.env.workspace)"
    ]
   },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -186,11 +186,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "CK:  18.555004119873047\nCL:  0.33\nCM:  10\nCO:  0\nRank Score 28.885004119873045\n\nCK:  39.89999771118164\nCL:  0.9675\nCM:  20\nCO:  0\nRank Score 60.86749771118164\n\nCK:  9.075004577636719\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  6.450004577636719\nCL:  2.465\nCM:  20\nCO:  0\nRank Score 28.915004577636722\n\nCK:  11.879997253417969\nCL:  0\nCM:  10\nCO:  0\nRank Score -5.0\n\nCK:  23.25\nCL:  1.985\nCM:  20\nCO:  0\nRank Score 45.235\n\nCK:  10.665000915527344\nCL:  20\nCM:  20\nCO:  0\nRank Score 50.665000915527344\n\nCK:  0\nCL:  1.9125\nCM:  10\nCO:  26\nRank Score -5.0\n\nCK:  33.94499588012695\nCL:  2.5625\nCM:  20\nCO:  0\nRank Score 56.50749588012695\n\nCK:  20.50499725341797\nCL:  0.545\nCM:  20\nCO:  0\nRank Score 41.04999725341797\n\nCK:  0\nCL:  0\nCM:  0\nCO:  0\nRank Score -5.0\n\nCK:  27.764991760253906\nCL:  8.1525\nCM:  20\nCO:  26\nRank Score 81.91749176025391\n\nCK:  7.5\nCL:  3.8175\nCM:  20\nCO:  26\nRank Score 57.317499999999995\n\nCK:  16.62000274658203\nCL:  0.7775\nCM:  20\nCO:  30\nRank Score 67.39750274658203\n\nCK:  0.6000022888183594\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  10.5\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  14.910003662109375\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  0\nCL:  0\nCM:  10\nCO:  30\nRank Score -5.0\n\nCK:  12.509994506835938\nCL:  11.85\nCM:  20\nCO:  0\nRank Score 44.35999450683594\n\nCK:  28.859996795654297\nCL:  12.27\nCM:  20\nCO:  0\nRank Score 61.12999679565429\n\n"
+     "text": "CK:  18.555004119873047\nCL:  0.33\nCM:  17\nCO:  0\nRank Score 35.885004119873045\n\nCK:  39.89999771118164\nCL:  0.9675\nCM:  20\nCO:  0\nRank Score 60.86749771118164\n\nCK:  9.075004577636719\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  6.450004577636719\nCL:  2.465\nCM:  20\nCO:  0\nRank Score 28.915004577636722\n\nCK:  11.879997253417969\nCL:  0\nCM:  17\nCO:  0\nRank Score -5.0\n\nCK:  23.25\nCL:  1.985\nCM:  20\nCO:  0\nRank Score 45.235\n\nCK:  10.665000915527344\nCL:  20\nCM:  20\nCO:  0\nRank Score 50.665000915527344\n\nCK:  0\nCL:  1.9125\nCM:  17\nCO:  26\nRank Score -5.0\n\nCK:  33.94499588012695\nCL:  2.5625\nCM:  20\nCO:  0\nRank Score 56.50749588012695\n\nCK:  20.50499725341797\nCL:  0.545\nCM:  20\nCO:  0\nRank Score 41.04999725341797\n\nCK:  0\nCL:  0\nCM:  0\nCO:  0\nRank Score -5.0\n\nCK:  27.764991760253906\nCL:  8.1525\nCM:  20\nCO:  26\nRank Score 81.91749176025391\n\nCK:  7.5\nCL:  3.8175\nCM:  20\nCO:  26\nRank Score 57.317499999999995\n\nCK:  16.62000274658203\nCL:  0.7775\nCM:  20\nCO:  30\nRank Score 67.39750274658203\n\nCK:  0.6000022888183594\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  10.5\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  14.910003662109375\nCL:  0\nCM:  20\nCO:  0\nRank Score -5.0\n\nCK:  0\nCL:  0\nCM:  17\nCO:  30\nRank Score -5.0\n\nCK:  12.509994506835938\nCL:  11.85\nCM:  20\nCO:  0\nRank Score 44.35999450683594\n\nCK:  28.859996795654297\nCL:  12.27\nCM:  20\nCO:  0\nRank Score 61.12999679565429\n\n"
     }
    ],
    "source": [
-    "fields = [\"SP\", \"CL85\", \"CLADT\", \"KSI\", \"THYA\" \"FYA\", \"SW\", \"CDP\", \"DA\", \"SR\", \"BDR\", \"Park\", \"OSF\", \"SWI\", \"RS\"]\n",
+    "fields = [\"SP\", \"CL85\", \"CLADT\", \"KSI\", \"THYA\", \"FYA\", \"SW\", \"CDP\", \"DA\", \"SR\", \"BDR\", \"Park\", \"OSF\", \"SWI\", \"RS\"]\n",
     "\n",
     "edit.startEditing(False, True)\n",
     "edit.startOperation()\n",
